# HarmonyCanvas

./: .gitignore  README.md
.github/workflows/: build-windows.yml
bridge/: package-lock.json  package.json  pull-selected-clip.mjs  test-protocol.mjs  transport-sync.mjs
design-system/harmony-canvas/: MASTER.md
design-system/harmony-canvas/pages/: transport-strip.md
docs/: ARCHITECTURE.md  HANDOFF.md  IMPLEMENTATION_PLAN.md  MOOD_MODEL_SPEC.md  PRODUCT_BACKLOG.md  PRODUCT_SPEC.md
juce-drag/: README.md
maxforlive/: HC.amxd  HarmonyCanvasPlayer.maxpat  README.md  harmonycanvas_fetch.js  harmonycanvas_router.js  test-router.js
plugdata/: Harmony Canvas.pd  README.md
plugin/: CMakeLists.txt  README.md
plugin/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
protocol/: README.md  harmony-project.schema.json
sidecar/: README.md  __init__.py  harmony_engine.py  ptm_analysis.py  server.py  songmaster.py
sidecar/data/composer/: advisor_catalog.json
sidecar/data/ptm/: README.md  RESEARCH-LOOPS-2026-07.md  cinematicProgressions.json  extendedCatalog.json  modalChordPairs.json  movementPatterns.json  progressionClasses.json  progressions.json  tfgAlgorithm.json
sidecar/tests/: test_harmony_engine.py  test_mood_engine.py  test_sidecar.py
tests/fixtures/: four-chords.json
web/: app.js  index.html  ptm_audio.js  styles.css
